<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="username">admin</string>
    <string name="password">12345</string>
    <string name="default_username">默认帐号admin</string>
    <string name="default_password">默认密码12345</string>
    <string name="app_name">安防</string>
    <string name="image_grid_name">相片</string>
    <string name="video_grid_name">录像</string>
    <string name="search">搜索</string>
    <string name="capability">能力</string>
    <string name="profile">描述</string>
    <string name="strema_uri">地址</string>
    <string name="rtsp_play">频道1</string>
    <string name="change">频道2</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="right_cruise">右巡航</string>
    <string name="left_cruise">左巡航</string>
    <string name="stop">停止</string>
    <string name="zoom_far">远</string>
    <string name="zoom_near">近</string>
    <string name="image">图像</string>
    <string name="image_param">图像参数</string>
    <string name="image_set">图像设置</string>
    <string name="brightness">亮度</string>
    <string name="colorSaturation">色度</string>
    <string name="contrast">对比度</string>
    <string name="warn">警告</string>
    <string name="sure">确定</string>
    <string name="about">关于</string>
    <string name="exit">关闭</string>
    <string name="exit_msg">确定要关闭?</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="change_theme">更改主题</string>
    <string name="change_date">修改日期</string>
    <string name="change_time">修改时间</string>
    <string name="add">新增</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="add_success">新增成功</string>
    <string name="update_success">修改成功</string>
    <string name="delete_success">删除成功</string>
    <string name="file_is_cannot_read">该文件不可读</string>

    <string-array name="file_oper_menu">
        <item>播放</item>
        <item>删除</item>
        <item>属性</item>
    </string-array>

    <string name="operate">操作</string>
    <string name="confirm_del_file">确定要删除吗？</string>
    <string name="rename">重命名</string>
    <string name="refresh">刷新</string>
    <string name="confirm_exit">确定要退出吗?</string>
    <string name="back_to_root">回到根目录</string>
    <string name="back_to_last">回到上一目录</string>
    <string name="child_items_info">[共有子文件 %1$s 个]</string>
    <string name="input_folder_name">输入文件夹名</string>
    <string name="foldername_is_exists">文件夹名已存在</string>
    <string name="filename_is_exists_toast">文件名已存在</string>
    <string name="please_del_child_files">请先删除子文件</string>
    <string name="file_attr">文件属性</string>
    <string name="file_type">类型:</string>
    <string name="file_location">位置:</string>
    <string name="file_size">大小:</string>
    <string name="file_create_time">创建日期:</string>
    <string name="file_mod_time">修改日期:</string>
    <string name="file_is_read">是否可读:</string>
    <string name="file_is_write">是否可写:</string>
    <string name="file_is_hidden">是否隐藏:</string>
    <string name="file">文件</string>
    <string name="folder">文件夹</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delect">删除</string>
    <string name="delete_all">删除全部</string>
    <string name="select">全选</string>
    <string name="notice">提示:长按确认键删除录制文件</string>
		<string name="record_mode">定时录制</string>
</resources>