<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="horizontal" >

       <Button
           android:id="@+id/button1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/search" 
           android:layout_weight="1"/>
       
       <Button
           android:id="@+id/button2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/capability" 
           android:layout_weight="1"/>
       
       <Button
           android:id="@+id/button_profile"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/profile" 
           android:layout_weight="1"/>
       <Button
           android:id="@+id/button3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/strema_uri" 
           android:layout_weight="1"/>
       
       <Button
           android:id="@+id/button4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/rtsp_play" 
           android:layout_weight="1"/>
       <Button
           android:id="@+id/button5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/change" 
           android:layout_weight="1"/>
       
    </LinearLayout>
    
		<LinearLayout 
		    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
       
		    <LinearLayout
        	android:layout_width="wrap_content"
       	  android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
       	  android:layout_marginLeft="100dp"
       	  android:layout_marginTop="100dp"
        	android:layout_weight="1"
        	android:orientation="vertical" >

					<!--
         <VideoView  
       	  android:id="@+id/video1" 
        	android:layout_alignParentTop="true" 
        	android:layout_width="500dp"  
        	android:layout_height="600dp" />
        	 -->
        	 
        <com.taixin.ffmpeg.widget.VideoView
        android:id="@+id/video1"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center" />
       			 
    </LinearLayout>
    
		    <LinearLayout
        	android:layout_width="wrap_content"
       	  android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
       	  android:layout_marginLeft="100dp"
       	  android:layout_marginTop="100dp"
        	android:layout_weight="1"
        	android:orientation="vertical" >
        			
		      <Button
           android:id="@+id/buttonup"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/up"
           android:layout_weight="1"/>
		      
		      <Button
           android:id="@+id/buttondown"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/down" 
           android:layout_weight="1"/>
		      
		      <Button
           android:id="@+id/buttonleft"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/left" 
           android:layout_weight="1"/>
		      
		      <Button
           android:id="@+id/buttonright"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/right" 
           android:layout_weight="1"/>
		      <Button
           android:id="@+id/buttonleftcruise"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/left_cruise" 
           android:layout_weight="1"/>
		      <Button
           android:id="@+id/buttonrightcruise"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/right_cruise" 
           android:layout_weight="1"/>
		      
		      <Button
           android:id="@+id/buttonstop"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/stop" 
           android:layout_weight="1"/>
		      <Button
           android:id="@+id/buttonzoomfar"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/zoom_far" 
           android:layout_weight="1"/>
		      <Button
           android:id="@+id/buttonzoomnear"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/zoom_near" 
           android:layout_weight="1"/>
		    </LinearLayout>
		    
		    <LinearLayout
        	android:layout_width="wrap_content"
       	  android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
       	  android:layout_marginLeft="100dp"
       	  android:layout_marginTop="100dp"
        	android:layout_weight="1"
        	android:orientation="vertical" >

        	<Button
           android:id="@+id/buttonimage1"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/brightness" 
           android:layout_weight="1"/>
        	
        	<Button
           android:id="@+id/buttonimage2"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/colorSaturation" 
           android:layout_weight="1"/>
        	
        	
        	<Button
           android:id="@+id/buttonimage3"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/contrast" 
           android:layout_weight="1"/>
        	
        	<Button
           android:id="@+id/buttonimage4"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/image_param" 
           android:layout_weight="1"/>
        	
        	<Button
           android:id="@+id/buttonimage5"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/image_set" 
           android:layout_weight="1"/>
        
    </LinearLayout>

    <LinearLayout
        	android:layout_width="wrap_content"
       	  android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
       	  android:layout_marginLeft="100dp"
       	  android:layout_marginTop="100dp"
        	android:layout_weight="1"
        	android:orientation="vertical" >

        <!-- <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10" />

        <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10" />

        <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10" />
        		 -->
        <SeekBar android:id="@+id/seekbar1"
        android:layout_width="200px"
        android:layout_height="wrap_content" 
        android:max="10"
        android:progress="5"
        android:secondaryProgress="5" />
        
        <SeekBar android:id="@+id/seekbar2"
        android:layout_width="200px"
        android:layout_height="wrap_content" 
        android:max="10"
        android:progress="5"
        android:secondaryProgress="5" />
        
        <SeekBar android:id="@+id/seekbar3"
        android:layout_width="200px"
        android:layout_height="wrap_content" 
        android:max="10"
        android:progress="5"
        android:secondaryProgress="5" />

        
    </LinearLayout>
		</LinearLayout>
 

</RelativeLayout>