<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="horizontal" >

       <Button
           android:id="@+id/button1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/search" 
           android:layout_weight="1"/>
       
       <Button
           android:id="@+id/button2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/capability" 
           android:layout_weight="1"/>
       
       <Button
           android:id="@+id/button3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/strema_uri" 
           android:layout_weight="1"/>
       
       <Button
           android:id="@+id/button4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/rtsp_play" 
           android:layout_weight="1"/>
       
    </LinearLayout>
    
		<LinearLayout 
		    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
       
		    <LinearLayout
        	android:layout_width="wrap_content"
       	  android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
       	  android:layout_marginLeft="100dp"
       	  android:layout_marginTop="100dp"
        	android:layout_weight="1"
        	android:orientation="vertical" >

        <VideoView  
       	  android:id="@+id/video1" 
        	android:layout_alignParentTop="true" 
        	android:layout_width="500dp"  
        	android:layout_height="600dp" />
        
    </LinearLayout>
    
		    <LinearLayout
        	android:layout_width="wrap_content"
       	  android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
       	  android:layout_marginLeft="100dp"
       	  android:layout_marginTop="100dp"
        	android:layout_weight="1"
        	android:orientation="vertical" >
        			
		      <Button
           android:id="@+id/buttonup"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/up"
           android:layout_weight="1"/>
		      
		      <Button
           android:id="@+id/buttondown"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/down" 
           android:layout_weight="1"/>
		      
		      <Button
           android:id="@+id/buttonleft"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/left" 
           android:layout_weight="1"/>
		      
		      <Button
           android:id="@+id/buttonright"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/right" 
           android:layout_weight="1"/>
		    </LinearLayout>
		    
		</LinearLayout>
 

</RelativeLayout>